--- a/SP3118801/style.css
+++ b/SP3118801/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #df7bec;
     margin: 0;
     padding: 0;
 }
@@ -8,14 +8,15 @@ body {
 .container {
     max-width: 600px;
     margin: 50px auto;
-    background-color: #fff;
+    background-color: #ccccccb1;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgb(132, 0, 132);
 }
 
 h1 {
     text-align: center;
+
 }
 
 .inputs {
@@ -30,7 +31,7 @@ label {
 input {
     width: 100%;
     padding: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(176, 173, 173);
     border-radius: 4px;
     box-sizing: border-box;
     margin-bottom: 10px;
@@ -40,7 +41,7 @@ input {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #4caf50;
+    background-color: #d745a2;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -48,7 +49,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #a40068;
 }
 
 #resultado {
